# pipes-tutorial

./: README.md  pipes-tutorial.cabal
app/: Main.hs
src/: Echo.hs  PipeTake.hs  Transformers.hs  Unix.hs
